<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Cadastro de Clientes</string>
    <string name="app_name">Cadastro de Alunos</string>
    <string name="btTelaCadastro">Cadastro</string>
    <string name="btTelaListagem">Listagem</string>
    <string name="btTelaListagemQA">Listagem QA</string>    
    <string name="btTelaGPS">Localização</string>
    <string name="btTelaFoto">Foto</string>
    <string name="btTelaTransmissao">Transmitir</string>
    <string name="btTelaMapa">Mapa</string>
	<string name="btTelaSlideShow">Slide Show</string>
</resources>
